--- a/AppTFG/app/src/main/res/layout/activity_inicio.xml
+++ b/AppTFG/app/src/main/res/layout/activity_inicio.xml
@@ -5,12 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    tools:context=".InicioActivity"
     >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".InicioActivity"
         android:gravity="center">
 
         <TextView
@@ -21,6 +21,7 @@
             android:layout_marginTop="20dp"
             android:text="@string/bienvenida"
             android:textAlignment="center"
+            android:textColor="@color/gris"
             android:textSize="50sp"
             android:textStyle="bold" />
 
@@ -42,7 +43,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="5dp"
-            android:backgroundTint="@color/teal_200"
+            android:backgroundTint="@color/turquesa"
             android:text="Iniciar sesión"
             android:textSize="22sp"
             app:cornerRadius="30dp" />
@@ -55,7 +56,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="100dp"
             android:layout_marginBottom="16dp"
-            android:backgroundTint="@color/teal_200"
+            android:backgroundTint="@color/turquesa"
             android:text="Registrarse"
             android:textSize="22sp"
             app:cornerRadius="30dp" />
@@ -72,7 +73,7 @@
             android:layout_marginEnd="20dp"
             android:text="O"
             android:textAlignment="center"
-            android:textColor="@color/purple_700"
+            android:textColor="@color/azul_electrico"
             android:textSize="16sp" />
 
         <View
@@ -85,7 +86,7 @@
             android:layout_marginRight="6dp"
             android:layout_marginBottom="21dp"
             android:layout_toLeftOf="@id/o"
-            android:background="@color/purple_700" />
+            android:background="@color/azul_electrico" />
 
         <View
             android:id="@+id/or_line2"
@@ -96,6 +97,6 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="21dp"
             android:layout_toRightOf="@id/o"
-            android:background="@color/purple_700" />
+            android:background="@color/azul_electrico" />
     </RelativeLayout>
 </LinearLayout>
