--- a/AppTFG/app/src/main/res/layout/catalogo_fragment.xml
+++ b/AppTFG/app/src/main/res/layout/catalogo_fragment.xml
@@ -19,4 +19,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/farmacos_btn"
+        android:layout_width="184dp"
+        android:layout_height="85dp"
+        android:layout_marginBottom="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="farmacos"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
