--- a/AppTFG/app/src/main/res/drawable/ic_ckeck.xml
+++ b/AppTFG/app/src/main/res/drawable/ic_ckeck.xml
@@ -1,5 +1,5 @@
 <vector android:height="30dp" android:tint="#FFFFFF"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="30dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M9,16.17L4.83,12l-1.42,1.41L9,19 21,7l-1.41,-1.41z"/>
 </vector>
