FEAT: Se implementa el catálogo de fármacos

--- a/AppTFG/app/src/main/res/layout/catalogo_fragment.xml
+++ b/AppTFG/app/src/main/res/layout/catalogo_fragment.xml
@@ -6,28 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.catalogo.CatalogoFragment">
 
-    <TextView
-        android:id="@+id/text_catalogo"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_catalogo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/farmacos_btn"
-        android:layout_width="184dp"
-        android:layout_height="85dp"
-        android:layout_marginBottom="80dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="farmacos"/>
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="10dp"
+        android:padding="8dp"
+        tools:listitem="@layout/farmaco"></androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
