--- a/AppTFG/app/src/main/res/layout/catalogo_fragment.xml
+++ b/AppTFG/app/src/main/res/layout/catalogo_fragment.xml
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.catalogo.CatalogoFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_catalogo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="10dp"
-        android:padding="8dp"
-        tools:listitem="@layout/farmaco"></androidx.recyclerview.widget.RecyclerView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:padding="8dp"
+            app:cardElevation="10dp"
+            app:cardCornerRadius="20dp"
+            android:clickable="true">
+
+            <SearchView
+                android:id="@+id/sv_buscador"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="30sp"
+                android:backgroundTint="#1B03DAC5"/>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_catalogo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="10dp"
+            android:padding="8dp"
+            tools:listitem="@layout/farmaco"
+            ></androidx.recyclerview.widget.RecyclerView>
+</LinearLayout>
