--- a/AppTFG/app/src/main/res/layout/farmaco.xml
+++ b/AppTFG/app/src/main/res/layout/farmaco.xml
@@ -2,14 +2,14 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv_farmaco"
-    android:background="@color/white"
     android:orientation="horizontal"
     android:layout_margin="15dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="100dp"
-    android:backgroundTint="@color/white"
-    app:cardCornerRadius="20dp">
+    app:cardElevation="10dp"
+    app:cardCornerRadius="20dp"
+    >
 
         <LinearLayout
             android:padding="10dp"
@@ -19,11 +19,10 @@
 
             <ImageView
                 android:id="@+id/img_farmaco"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:elevation="100dp"
                 android:src="@drawable/ic_farmaco"
-
              />
 
             <GridLayout
@@ -47,7 +46,7 @@
                     android:layout_row="1"
                     android:layout_column="0"
                     android:layout_gravity="center_vertical"
-                    android:textSize="45sp" />
+                    android:textSize="30sp" />
 
                 <GridLayout
                     android:layout_width="wrap_content"
@@ -65,7 +64,7 @@
                         android:text="Dosis máxima:"
                         android:textAlignment="textEnd"
                         android:textColor="@color/rojo"
-                        android:textSize="30sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -77,8 +76,7 @@
                         android:text="12 ug/día"
                         android:textAlignment="textEnd"
                         android:textColor="@color/rojo"
-                        android:textSize="30sp"
-                        android:textStyle="bold" />
+                        android:textSize="20sp"/>
                 </GridLayout>
             </GridLayout>
 
