--- a/AppTFG/app/src/main/res/drawable/side_nav_bar.xml
+++ b/AppTFG/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#009688"
-        android:endColor="#00695C"
-        android:startColor="#4DB6AC"
+        android:centerColor="@color/azul_electrico"
+        android:endColor="@color/azul_oscuro"
+        android:startColor="@color/azul_electrico"
         android:type="linear" />
 </shape>
