--- a/AppTFG/app/src/main/res/layout/catalogo_fragment.xml
+++ b/AppTFG/app/src/main/res/layout/catalogo_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,10 +7,16 @@
     android:orientation="vertical"
     tools:context=".ui.catalogo.CatalogoFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:layout_marginTop="15dp"
             android:padding="8dp"
             app:cardElevation="10dp"
             app:cardCornerRadius="20dp"
@@ -20,8 +26,8 @@
                 android:id="@+id/sv_buscador"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textSize="30sp"
-                android:backgroundTint="#1B03DAC5"/>
+                android:backgroundTint="#1B03DAC5"
+                android:textSize="30sp" />
         </androidx.cardview.widget.CardView>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -32,4 +38,23 @@
             android:padding="8dp"
             tools:listitem="@layout/farmaco"
             ></androidx.recyclerview.widget.RecyclerView>
-</LinearLayout>
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/fab"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:backgroundTint="@color/amarillo"
+        android:text="Añadir fármaco"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:elevation="20dp"
+        app:icon="@drawable/ic_more"
+        app:iconSize="35dp"
+        app:iconTint="@color/white" />
+</FrameLayout>
