--- a/AppTFG/app/src/main/res/layout/farmaco.xml
+++ b/AppTFG/app/src/main/res/layout/farmaco.xml
@@ -38,7 +38,7 @@
 
                 <TextView
                     android:id="@+id/tv_nombre_farmaco"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:textStyle="bold"
@@ -79,7 +79,6 @@
                         android:textSize="20sp"/>
                 </GridLayout>
             </GridLayout>
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
