--- a/AppTFG/app/src/main/res/menu/activity_main_drawer.xml
+++ b/AppTFG/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,15 +7,15 @@
 
         <item
             android:id="@+id/nav_dosimetro"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_calculadora"
             android:title="@string/menu_dosimetro" />
         <item
             android:id="@+id/nav_mezclas"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_calculadora"
             android:title="@string/menu_mezclas" />
         <item
             android:id="@+id/nav_catalogo"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_catalogo"
             android:title="@string/menu_catalogo" />
 
     </group>
