--- a/AppTFG/app/src/main/res/layout/activity_inicio.xml
+++ b/AppTFG/app/src/main/res/layout/activity_inicio.xml
@@ -36,27 +36,21 @@
 
         <Button
             android:id="@+id/login_btn"
-            android:layout_width="350dp"
-            android:layout_height="70dp"
+            style="@style/BotonPrincipal"
+            android:layout_width="@dimen/width_boton_principal"
+            android:layout_height="@dimen/height_boton_principal"
             android:layout_row="2"
             android:layout_column="0"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/turquesa"
-            android:text="@string/login"
-            android:textSize="22sp"
-            app:cornerRadius="30dp" />
+            android:text="@string/login"/>
 
         <Button
             android:id="@+id/signup_btn"
-            android:layout_width="350dp"
-            android:layout_height="70dp"
+            style="@style/BotonPrincipal"
+            android:layout_width="@dimen/width_boton_principal"
+            android:layout_height="@dimen/height_boton_principal"
             android:layout_row="4"
             android:layout_column="0"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/turquesa"
-            android:text="@string/signup"
-            android:textSize="22sp"
-            app:cornerRadius="30dp" />
+            android:text="@string/signup" />
 
         <View
             android:id="@+id/or_line"
