--- a/AppTFG/app/src/main/res/layout/dosis_maxima.xml
+++ b/AppTFG/app/src/main/res/layout/dosis_maxima.xml
@@ -27,7 +27,7 @@
             android:layout_column="0"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="5dp"
-            android:imeOptions="actionNext"
+            android:imeOptions="actionDone"
             android:inputType="numberDecimal"
             android:textColor="@color/gris"
             android:hint="@string/valor"
