--- a/AppTFG/app/src/main/res/values/dimens.xml
+++ b/AppTFG/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- Botón principal -->
+    <dimen name="width_boton_principal">350dp</dimen>
+    <dimen name="height_boton_principal">70dp</dimen>
+
 </resources>
