--- a/AppTFG/app/src/main/res/values/styles.xml
+++ b/AppTFG/app/src/main/res/values/styles.xml
@@ -11,4 +11,14 @@
         <item name="android:elevation">10dp</item>
         <item name="cornerRadius">50dp</item>
     </style>
+
+    <!-- Botón principal -->
+    <style name="BotonPrincipal">
+        <item name="android:layout_width">350dp</item>
+        <item name="android:height">70dp</item>
+        <item name="android:backgroundTint">@color/turquesa</item>
+        <item name="android:textSize">22sp</item>
+        <item name="cornerRadius">30dp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
 </resources>
