--- a/AppTFG/app/src/main/res/values/styles.xml
+++ b/AppTFG/app/src/main/res/values/styles.xml
@@ -13,12 +13,34 @@
     </style>
 
     <!-- Botón principal -->
-    <style name="BotonPrincipal">
+    <style name="BotonPrincipal" parent="ThemeOverlay.Material3.Button.ElevatedButton">
         <item name="android:layout_width">350dp</item>
-        <item name="android:height">70dp</item>
+        <item name="android:layout_height">70dp</item>
         <item name="android:backgroundTint">@color/turquesa</item>
-        <item name="android:textSize">22sp</item>
-        <item name="cornerRadius">30dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="cornerRadius">25dp</item>
+        <item name="android:padding">20dp</item>
         <item name="android:layout_gravity">center</item>
+    </style>
+
+    <!-- CardView -->
+    <style name="CardViewPrincipal" parent="Widget.Material3.CardView.Elevated">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="cardCornerRadius">30dp</item>
+        <item name="cardElevation">50dp</item>
+        <item name="android:layout_marginHorizontal">30dp</item>
+        <item name="android:scrollbarAlwaysDrawHorizontalTrack">true</item>
+    </style>
+
+    <style name="Titulo">
+        <item name="android:textSize">40dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAlignment">textStart</item>
+
+
     </style>
 </resources>
