FEAT: Se hace el layout responsive

--- a/AppTFG/app/src/main/res/layout/activity_login.xml
+++ b/AppTFG/app/src/main/res/layout/activity_login.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".LoginActivity"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    tools:context=".LoginActivity"
     android:background="@drawable/fondo"
     android:useDefaultMargins="true">
+
     <androidx.cardview.widget.CardView
         android:id="@+id/card_login"
-        android:layout_column="0"
-        android:layout_row="0"
-        android:layout_width="550dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="160dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp"
-        app:elevation="50dp">
+        style="@style/CardViewPrincipal"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline1"
+        app:layout_constraintVertical_bias="0.45">
 
         <RelativeLayout
             android:id="@+id/form_login"
@@ -29,12 +27,8 @@
 
             <TextView
                 android:id="@+id/login_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/login_title"
-                android:textAlignment="center"
-                android:textSize="50sp"
-                android:textStyle="bold" />
+                style="@style/Titulo"
+                android:text="@string/login_title" />
 
             <GridLayout
                 android:layout_width="match_parent"
@@ -57,11 +51,11 @@
                         android:id="@+id/et_login_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="emailAddress"
                         android:hint="@string/email_placeholder"
                         android:imeOptions="actionNext"
                         android:inputType="textEmailAddress"
-                        android:textColor="@color/gris"
-                        android:autofillHints="emailAddress" />
+                        android:textColor="@color/gris" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -80,39 +74,58 @@
                         android:id="@+id/et_login_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="password"
                         android:hint="@string/password_placeholder"
                         android:imeOptions="actionDone"
                         android:inputType="textPassword"
-                        android:textColor="@color/gris"
-                        android:autofillHints="password" />
+                        android:textColor="@color/gris" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/bt_login_submit"
+                    style="@style/BotonPrincipal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_row="3"
                     android:layout_column="0"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="23dp"
-                    app:icon="@drawable/ic_verificado"
-                    android:backgroundTint="@color/turquesa"
-                    android:elevation="40dp"
-                    android:padding="20dp"
                     android:text="@string/continuar_bt"
-                    android:textSize="20sp"
-                    app:cornerRadius="30dp" />
+                    app:icon="@drawable/ic_verificado" />
             </GridLayout>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
     <ImageView
-        android:layout_width="450dp"
-        android:layout_height="300dp"
-        android:layout_gravity="center"
-        android:layout_column="0"
-        android:layout_row="1"
-        android:layout_marginTop="15dp"
+        android:id="@+id/img_login_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:contentDescription="@string/descripcion_personal_img"
         android:src="@drawable/ic_login"
-        android:contentDescription="@string/descripcion_personal_img" />
-</GridLayout>
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.15"/>
+    
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.7"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.95" />
+</androidx.constraintlayout.widget.ConstraintLayout>
