--- a/AppTFG/app/src/main/res/layout/activity_registrar_farmaco.xml
+++ b/AppTFG/app/src/main/res/layout/activity_registrar_farmaco.xml
@@ -1,202 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".RegistrarFarmaco"
+    android:id="@+id/registrar_farmaco_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/fondo"
-    android:useDefaultMargins="true"
-    android:id="@+id/registrar_farmaco_activity"
-    tools:context=".RegistrarFarmaco">
+    android:useDefaultMargins="true">
+
   <androidx.cardview.widget.CardView
       android:id="@+id/card_add_farmaco"
-      android:scrollbarAlwaysDrawHorizontalTrack="true"
-      android:layout_column="0"
-      android:layout_row="0"
-      android:layout_width="550dp"
-      android:layout_height="590dp"
-      android:layout_gravity="center"
-      android:layout_marginTop="50dp"
-      app:cardCornerRadius="30dp"
-      app:cardElevation="20dp"
-      app:elevation="50dp">
+      style="@style/CardViewPrincipal"
+      android:layout_height="wrap_content"
+      android:layout_marginVertical="10dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintBottom_toTopOf="@+id/guideline2"
+      app:layout_constraintTop_toTopOf="@+id/guideline1">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-      <RelativeLayout
+      <LinearLayout
           android:id="@+id/form_add_farmaco"
           android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_margin="5dp"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
           android:padding="25dp">
 
         <TextView
             android:id="@+id/add_farmaco_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Añadir fármaco"
-            android:textAlignment="center"
-            android:textSize="50sp"
-            android:textStyle="bold" />
+            style="@style/Titulo"
+            android:text="Añadir fármaco:" />
 
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/add_farmaco_title">
+        <include layout="@layout/formulario_farmaco" />
 
-          <TextView
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_row="0"
-              android:layout_column="0"
-              android:layout_marginTop="15dp"
-              android:text="Nombre:"
-              android:textColor="@color/gris"
-              android:textSize="15sp" />
-
-          <com.google.android.material.textfield.TextInputLayout
-              android:id="@+id/til_add_farmaco_name"
-              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_row="1"
-              android:layout_column="0"
-              android:layout_marginTop="8dp"
-              app:endIconDrawable="@drawable/ic_borrar"
-              app:endIconMode="clear_text"
-              app:helperTextTextColor="@color/rojo"
-              app:startIconDrawable="@drawable/ic_text">
-
-            <EditText
-                android:id="@+id/et_add_farmaco_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autofillHints="name"
-                android:hint="Introduzca el nombre del fármaco (*)"
-                android:imeOptions="actionNext"
-                android:inputType="text"
-                android:textColor="@color/gris" />
-          </com.google.android.material.textfield.TextInputLayout>
-
-          <TextView
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_row="2"
-              android:layout_column="0"
-              android:layout_marginTop="15dp"
-              android:layout_marginBottom="8dp"
-              android:text="Presentación comercial:"
-              android:textColor="@color/gris"
-              android:textSize="15sp" />
-
-          <ScrollView
-              android:id="@+id/sr_lista_pre"
-              android:layout_width="match_parent"
-              android:layout_height="80dp"
-              android:layout_row="3"
-              android:layout_column="0"
-              android:background="@drawable/round_box"
-              android:elevation="1dp"
-              android:fadeScrollbars="false"
-              android:minHeight="70dp"
-              android:orientation="vertical"
-              android:scrollbarAlwaysDrawVerticalTrack="true"
-              android:scrollbarFadeDuration="50000"
-              android:scrollbarSize="4dp"
-              android:scrollbarThumbVertical="@color/azul_electrico">
-
-            <LinearLayout
-                android:id="@+id/layout_lista_pre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-          </ScrollView>
-
-          <com.google.android.material.button.MaterialButton
-              android:id="@+id/bt_add_pre"
-              style="@style/Widget.App.Button.IconOnly"
-              android:layout_width="wrap_content"
-              android:layout_height="30dp"
-              android:layout_row="4"
-              android:layout_column="0"
-              android:layout_margin="8dp"
-              android:layout_marginStart="15dp"
-              app:backgroundTint="@color/verde"
-              app:icon="@drawable/ic_more"
-              app:iconTint="@color/white" />
-
-          <TextView
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_row="5"
-              android:layout_column="0"
-              android:layout_marginTop="15dp"
-              android:text="Dosis máxima:"
-              android:textColor="@color/gris"
-              android:textSize="15sp" />
-
-          <include
-              layout="@layout/dosis_maxima"
-              android:layout_width="wrap_content"
-              android:layout_height="match_parent"
-              android:layout_row="6"
-              android:layout_column="0"
-              android:layout_marginBottom="5dp" />
-
-          <GridLayout
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_row="7"
-              android:layout_column="0"
-              android:layout_gravity="center_horizontal|bottom">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/bt_add_farmaco_cancel"
-                style="@style/Widget.App.Button.IconOnly"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="23dp"
-                android:backgroundTint="@color/rojo"
-                android:elevation="40dp"
-                android:padding="20dp"
-                android:textSize="18sp"
-                app:cornerRadius="20dp"
-                app:icon="@drawable/ic_borrar" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/bt_add_farmaco_submit"
-                style="@style/Widget.App.Button.IconOnly"
-                android:layout_row="0"
-                android:layout_column="1"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="23dp"
-                android:backgroundTint="@color/verde"
-                android:elevation="40dp"
-                android:padding="20dp"
-                android:textSize="18sp"
-                app:cornerRadius="20dp"
-                app:icon="@drawable/ic_ckeck" />
-
-          </GridLayout>
-
-
-        </GridLayout>
-      </RelativeLayout>
+      </LinearLayout>
     </ScrollView>
   </androidx.cardview.widget.CardView>
 
   <ImageView
-      android:layout_width="480dp"
-      android:layout_height="250dp"
-      android:layout_gravity="center"
-      android:layout_column="0"
-      android:layout_row="1"
-      android:layout_marginTop="5dp"
+      android:id="@+id/imageView3"
+      android:layout_width="wrap_content"
+      android:layout_height="0dp"
       android:src="@drawable/ic_signup"
-      android:contentDescription="@string/descripcion_personal_img" />
+      android:contentDescription="@string/descripcion_personal_img"
+      app:layout_constraintHorizontal_chainStyle="spread"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintBottom_toTopOf="@+id/guideline3"
+      app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
-</GridLayout>
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      app:layout_constraintGuide_percent="0.12" />
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      app:layout_constraintGuide_percent="0.78"/>
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline3"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      app:layout_constraintGuide_percent="0.98" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
