--- a/AppTFG/app/src/main/res/layout/activity_registrar_farmaco.xml
+++ b/AppTFG/app/src/main/res/layout/activity_registrar_farmaco.xml
@@ -14,6 +14,8 @@
       style="@style/CardViewPrincipal"
       android:layout_height="wrap_content"
       android:layout_marginVertical="10dp"
+      app:layout_constrainedHeight="true"
+
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/guideline2"
@@ -47,6 +49,7 @@
       android:layout_height="0dp"
       android:src="@drawable/ic_signup"
       android:contentDescription="@string/descripcion_personal_img"
+      app:layout_constrainedHeight="true"
       app:layout_constraintHorizontal_chainStyle="spread"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -58,14 +61,14 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
-      app:layout_constraintGuide_percent="0.12" />
+      app:layout_constraintGuide_percent="0.05" />
 
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
-      app:layout_constraintGuide_percent="0.78"/>
+      app:layout_constraintGuide_percent="0.8"/>
 
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline3"
